--- a/index.html
+++ b/index.html
@@ -151,24 +151,36 @@
     <section class="about-me" id="about">
       <h2 class="section__title section__title--about">Who I am</h2>
       <p class="section__subtitle section__subtitle--about">
-        Designer & developer based out of Chicago
+        Designer & Developer
       </p>
 
       <div class="about-me__body">
         <p>
           I'm a full-stack developer in Chicago. I write clean modular code to
           create projects. I love working on projects that make an impact on
-          people's lives. check out my resume here LINK, contact me here lets'
-          work together LINK
+          people's lives.
         </p>
         <p>
-          I'm a student in lamba school, on the fE I build projects using
-          <strong> JavaScript, React, SASS, style components</strong>. I build
-          BE using <strong>NodeJS/Express, Apollo/GraphQL, Firebase </strong>
+          I like creating beautiful websites using
+          <strong> JavaScript, React, SASS, and Styled Components</strong> and
+          scalable databases using
+          <strong
+            >NodeJS/Express, PostgreSQL, MySQL, Apollo/GraphQL, Firebase, and
+            MongoDB
+          </strong>
+        </p>
+        <p>
+          You can check out my
+          <a target="_blank" href="http://www.google.com"
+            ><strong>resume</strong></a
+          >. Lets work together:
+          <a href="mailto:josemariodev@gmail.com"
+            ><strong>josemariodev@gmail.com</strong></a
+          >
         </p>
       </div>
 
-      <img src="img/selfie-07.jpg" alt="Jose smiling" class="about-me__img" />
+      <img src="img/selfie-08.jpg" alt="Jose smiling" class="about-me__img" />
     </section>
 
     <!-- My Work -->
@@ -180,6 +192,7 @@
 
       <div class="portfolio">
         <!-- Portfolio item 01 -->
+
         <a href="revitalize.html" target="_blank" class="portfolio__item">
           <img
             src="img/projects/revitalize/revitalize-homepage.jpg"
