--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     />
 
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="scss/main.css" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -51,20 +52,72 @@
           <img src="img/signature.png" alt="signature for josemariodev" />
         </a>
       </div>
-      <button class="nav-toggle" aria-label="toggle navigation">
-        <span class="hamburger"></span>
-      </button>
-      <nav class="nav">
-        <ul class="nav__list">
-          <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
-          <li class="nav__item">
-            <a href="#services" class="nav__link">My Services</a>
+      <div class="menu-btn">
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+      </div>
+
+      <nav class="menu">
+        <div class="menu-branding">
+          <div class="portrait"></div>
+
+          <a
+            href="mailto:josemariodev@gmail.com"
+            class="nav-link"
+            style="text-transform: lowercase;"
+            >josemariodev@gmail.com</a
+          >
+          <ul class="social-list">
+            <li class="social-list__item">
+              <a
+                class="social-list__link"
+                target="_blank"
+                href="https://linkedin.com/in/josemariodev"
+              >
+                <i class="fab fa-linkedin"></i>
+              </a>
+            </li>
+            <li class="social-list__item">
+              <a
+                class="social-list__link"
+                target="_blank"
+                href="https://twitter.com/josemariodev"
+              >
+                <i class="fab fa-twitter"></i>
+              </a>
+            </li>
+            <li class="social-list__item">
+              <a
+                class="social-list__link"
+                target="_blank"
+                href="https://github.com/josemariodev"
+              >
+                <i class="fab fa-github"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <ul class="menu-nav">
+          <li class="nav-item current">
+            <a href="#home" class="nav-link">
+              Home
+            </a>
           </li>
-          <li class="nav__item">
-            <a href="#about" class="nav__link">About me</a>
+          <li class="nav-item">
+            <a href="#services" class="nav-link">
+              My Services
+            </a>
           </li>
-          <li class="nav__item">
-            <a href="#work" class="nav__link">Portfolio</a>
+          <li class="nav-item">
+            <a href="#about" class="nav-link">
+              About Me
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="#work" class="nav-link">
+              Portfolio
+            </a>
           </li>
         </ul>
       </nav>
@@ -180,7 +233,7 @@
         </p>
       </div>
 
-      <img src="img/selfie-08.jpg" alt="Jose smiling" class="about-me__img" />
+      <!-- <img src="img/selfie-08.jpg" alt="Jose smiling" class="about-me__img" /> -->
     </section>
 
     <!-- My Work -->
@@ -256,7 +309,6 @@
         </li>
       </ul>
     </footer>
-
     <script src="js/index.js"></script>
   </body>
 </html>
