:bento: change logo

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <header>
       <div class="logo">
         <a href="#home">
-          <img src="img/signature.png" alt="signature for josemariodev" />
+          <img src="img/rotated.png" alt="signature for josemariodev" />
         </a>
       </div>
       <div class="menu-btn">
@@ -233,7 +233,8 @@
         </p>
       </div>
 
-      <!-- <img src="img/selfie-08.jpg" alt="Jose smiling" class="about-me__img" /> -->
+      <!-- <img src="img/rotated.png" alt="Jose smiling" class="about-me__img" /> -->
+      <img src="img/rotated.png" alt="Jose smiling" class="about-me__img" />
     </section>
 
     <!-- My Work -->
