--- a/revitalize.html
+++ b/revitalize.html
@@ -50,7 +50,7 @@
     <header>
       <div class="logo">
         <a href="index.html#home">
-          <img src="img/signature.png" alt="signature for josemariodev" />
+          <img src="img/rotated.png" alt="signature for josemariodev" />
         </a>
       </div>
       <div class="menu-btn">
