--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <p class="section__subtitle section__subtitle--intro">
         Full-Stack Developer
       </p>
-      <img src="img/selfie-08.jpg" alt="Jose red selfie" class="intro__img" />
+      <img src="img/selfie-10.jpg" alt="Jose red selfie" class="intro__img" />
     </section>
 
     <!-- My services -->
@@ -233,8 +233,8 @@
         </p>
       </div>
 
-      <!-- <img src="img/rotated.png" alt="Jose smiling" class="about-me__img" /> -->
       <img src="img/rotated.png" alt="Jose smiling" class="about-me__img" />
+      <!-- <img src="img/chicago.jpg" alt="Jose smiling" class="about-me__img" /> -->
     </section>
 
     <!-- My Work -->
