--- a/index.html
+++ b/index.html
@@ -144,16 +144,24 @@
             I value simple content structure, clean design patterns, and
             thoughtful interactions.
           </p>
-          <!-- <h4>Design Skills</h4>
-          <p>UX, UI, Web, Mobile, Apps, Logos</p>
-
-          <h4>Design Tools</h4>
-          <ul>
-            <li>Figma</li>
-            <li>Sketch</li>
-            <li>Adobe XD</li>
-            <li>Zeplin</li>
-          </ul> -->
+          <ul class="service-icons">
+            <li>
+              <i class="fab fa-figma"></i>
+              <p>Figma</p>
+            </li>
+            <li>
+              <i class="fab fa-sketch"></i>
+              <p>Sketch</p>
+            </li>
+            <li>
+              <i class="fab fa-adobe"></i>
+              <p>Adobe XD</p>
+            </li>
+            <li>
+              <i class="fab fa-sass"></i>
+              <p>SASS</p>
+            </li>
+          </ul>
         </div>
         <!-- / service -->
 
@@ -163,16 +171,24 @@
             I like to code things from scratch, and enjoy bringing ideas to life
             in the browser.
           </p>
-          <!-- <h4>Languages & Frameworks</h4>
-          <p>JavaScript, React, Python</p>
-
-          <h4>Development Tools</h4>
-          <ul>
-            <li>VS Code</li>
-            <li>Github</li>
-            <li>Terminal</li>
-            <li>Atom</li>
-          </ul> -->
+          <ul class="service-icons">
+            <li>
+              <i class="fab fa-js"></i>
+              <p>JavaScript</p>
+            </li>
+            <li>
+              <i class="fab fa-react"></i>
+              <p>React</p>
+            </li>
+            <li>
+              <i class="fab fa-python"></i>
+              <p>Python</p>
+            </li>
+            <li>
+              <i class="fas fa-database"></i>
+              <p>SQL</p>
+            </li>
+          </ul>
         </div>
         <!-- / service -->
 
@@ -182,16 +198,29 @@
             I genuinely care about people, and love helping fellow developers
             work on their craft.
           </p>
-          <!-- <h4>Communication Skills</h4>
-          <p>UI/UX, Product design, Freelancing</p>
-
-          <h4>Experience</h4>
-          <ul>
-            <li>Management</li>
-            <li>Bilingual</li>
-            <li>Customer Service</li>
-            <li>Deadlines</li>
-          </ul> -->
+          <ul class="service-icons">
+            <li>
+              <i class="fab fa-trello"></i>
+              <p>Trello</p>
+            </li>
+            <li>
+              <img
+                src="/img/notion.png"
+                width="23"
+                height="25"
+                alt="notion img"
+              />
+              <p>Notion</p>
+            </li>
+            <li>
+              <i class="fas fa-sync"></i>
+              <p>Agile</p>
+            </li>
+            <li>
+              <i class="fab fa-slack"></i>
+              <p>Slack</p>
+            </li>
+          </ul>
         </div>
         <!-- / service -->
       </div>
