:sparkles: Added 4th service to 'What I Do'
split deveopment into 2 sections - FE and BE

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <!-- / service -->
 
         <div class="service">
-          <h3>Develop</h3>
+          <h3>Front-End</h3>
           <p>
             I like to code things from scratch, and enjoy bringing ideas to life
             in the browser.
@@ -191,6 +191,37 @@
         </div>
         <!-- / service -->
 
+        <div class="service">
+          <h3>Back-End</h3>
+          <p>
+            I genuinely care about people, and love helping fellow developers
+            work on their craft.
+          </p>
+          <ul class="service-icons">
+            <li>
+              <i class="fab fa-trello"></i>
+              <p>Trello</p>
+            </li>
+            <li>
+              <img
+                src="/img/notion.png"
+                width="23"
+                height="25"
+                alt="notion img"
+              />
+              <p>Notion</p>
+            </li>
+            <li>
+              <i class="fas fa-sync"></i>
+              <p>Agile</p>
+            </li>
+            <li>
+              <i class="fab fa-slack"></i>
+              <p>Slack</p>
+            </li>
+          </ul>
+        </div>
+        <!-- / service -->
         <div class="service">
           <h3>Collaborate</h3>
           <p>
