:art: updated what I do section

--- a/index.html
+++ b/index.html
@@ -183,10 +183,6 @@
               <i class="fab fa-python"></i>
               <p>Python</p>
             </li>
-            <li>
-              <i class="fas fa-database"></i>
-              <p>SQL</p>
-            </li>
           </ul>
         </div>
         <!-- / service -->
@@ -194,30 +190,25 @@
         <div class="service">
           <h3>Back-End</h3>
           <p>
-            I genuinely care about people, and love helping fellow developers
-            work on their craft.
+            I like to code things from scratch, and enjoy bringing ideas to life
+            in the browser.
           </p>
           <ul class="service-icons">
             <li>
-              <i class="fab fa-trello"></i>
-              <p>Trello</p>
+              <i class="fab fa-js"></i>
+              <p>JavaScript</p>
             </li>
             <li>
-              <img
-                src="/img/notion.png"
-                width="23"
-                height="25"
-                alt="notion img"
-              />
-              <p>Notion</p>
+              <i class="fab fa-react"></i>
+              <p>React</p>
             </li>
             <li>
-              <i class="fas fa-sync"></i>
-              <p>Agile</p>
+              <i class="fab fa-python"></i>
+              <p>Python</p>
             </li>
             <li>
-              <i class="fab fa-slack"></i>
-              <p>Slack</p>
+              <i class="fas fa-database"></i>
+              <p>SQL</p>
             </li>
           </ul>
         </div>
