--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
               Portfolio
             </a>
           </li>
+          <li class="nav-item">
+            <a href="#work" class="nav-link">
+              Resume
+            </a>
+          </li>
         </ul>
       </nav>
     </header>
