:art: Rename section
my services -> skills

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           </li>
           <li class="nav-item">
             <a href="#services" class="nav-link">
-              My Services
+              Skills
             </a>
           </li>
           <li class="nav-item">
@@ -140,7 +140,7 @@
 
     <!-- My services -->
     <section class="my-services" id="services">
-      <h2 class="section__title section__title--services">What I do</h2>
+      <h2 class="section__title section__title--services">Skills</h2>
       <div class="services">
         <div class="service">
           <h3>Design</h3>
