--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="#work" class="nav-link">
+            <a href="./Resume.pdf" target="_blank" class="nav-link">
               Resume
             </a>
           </li>
