--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
         <div class="service">
           <h3>Design</h3>
           <p>
-            I value simple content structure, clean design patterns, and
-            thoughtful interactions.
+            I like using modern design tools to create intuitive design patterns
+            and thoughtful interactions.
           </p>
           <ul class="service-icons">
             <li>
@@ -161,10 +161,10 @@
               <i class="fab fa-adobe"></i>
               <p>Adobe XD</p>
             </li>
-            <li>
+            <!-- <li>
               <i class="fab fa-sass"></i>
               <p>SASS</p>
-            </li>
+            </li> -->
           </ul>
         </div>
         <!-- / service -->
@@ -172,8 +172,8 @@
         <div class="service">
           <h3>Front-End</h3>
           <p>
-            I like to code things from scratch, and enjoy bringing ideas to life
-            in the browser.
+            I write clean, modular components using popular frameworks that are
+            accessible across all devices.
           </p>
           <ul class="service-icons">
             <li>
@@ -185,8 +185,8 @@
               <p>React</p>
             </li>
             <li>
-              <i class="fab fa-python"></i>
-              <p>Python</p>
+              <i class="fas fa-mobile-alt"></i>
+              <p>Responsive</p>
             </li>
           </ul>
         </div>
@@ -200,12 +200,8 @@
           </p>
           <ul class="service-icons">
             <li>
-              <i class="fab fa-js"></i>
-              <p>JavaScript</p>
-            </li>
-            <li>
-              <i class="fab fa-react"></i>
-              <p>React</p>
+              <i class="fab fa-node-js"></i>
+              <p>Node JS</p>
             </li>
             <li>
               <i class="fab fa-python"></i>
