:art: Update skills section
BE and Collaborate

--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
         <div class="service">
           <h3>Back-End</h3>
           <p>
-            I like to code things from scratch, and enjoy bringing ideas to life
-            in the browser.
+            I design databases and optimize queries. I'm familiar with testing
+            and writing documentation.
           </p>
           <ul class="service-icons">
             <li>
@@ -207,9 +207,13 @@
               <i class="fab fa-python"></i>
               <p>Python</p>
             </li>
-            <li>
+            <!-- <li>
               <i class="fas fa-database"></i>
               <p>SQL</p>
+            </li> -->
+            <li>
+              <i class="fab fa-git-alt"></i>
+              <p>Git</p>
             </li>
           </ul>
         </div>
@@ -225,7 +229,7 @@
               <i class="fab fa-trello"></i>
               <p>Trello</p>
             </li>
-            <li>
+            <!-- <li>
               <img
                 src="/img/notion.png"
                 width="23"
@@ -233,7 +237,7 @@
                 alt="notion img"
               />
               <p>Notion</p>
-            </li>
+            </li> -->
             <li>
               <i class="fas fa-sync"></i>
               <p>Agile</p>
