--- a/index.html
+++ b/index.html
@@ -119,7 +119,11 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="./Resume.pdf" target="_blank" class="nav-link">
+            <a
+              href="https://resume.creddle.io/resume/6ucve7g9ic"
+              target="_blank"
+              class="nav-link"
+            >
               Resume
             </a>
           </li>
@@ -219,7 +223,7 @@
         </div>
         <!-- / service -->
         <div class="service">
-          <h3>Collaborate</h3>
+          <h3>Collaboration</h3>
           <p>
             I genuinely care about people, and love helping fellow developers
             work on their craft.
