:art: Update about me section

--- a/index.html
+++ b/index.html
@@ -268,11 +268,18 @@
 
       <div class="about-me__body">
         <p>
-          I'm a full-stack developer in Chicago. I write clean modular code to
-          create projects. I love working on projects that make an impact on
-          people's lives.
+          I'm a full-stack developer in Chicago. I'm a full-time student at
+          Lambda School. I'm currently enrolled in the web development program
+          where students learn web development and CS fundamentals by working in
+          teams to build real world projects.
         </p>
         <p>
+          Previously, I've <a href="./Resume.pdf">worked</a> in the insurance
+          and service industries in a management capacity. I’m looking for an
+          opportunity where I can put my abilities to work for a mission I’m
+          passionate about.
+        </p>
+        <!-- <p>
           I like creating beautiful websites using
           <strong> JavaScript, React, SASS, and Styled Components</strong> and
           scalable databases using
@@ -280,8 +287,8 @@
             >NodeJS/Express, PostgreSQL, MySQL, Apollo/GraphQL, Firebase, and
             MongoDB
           </strong>
-        </p>
-        <p>
+        </p> -->
+        <!-- <p>
           You can check out my
           <a target="_blank" href="http://www.google.com"
             ><strong>resume</strong></a
@@ -289,7 +296,7 @@
           <a href="mailto:josemariodev@gmail.com"
             ><strong>josemariodev@gmail.com</strong></a
           >
-        </p>
+        </p> -->
       </div>
 
       <img src="img/action.jpg" alt="Jose smiling" class="about-me__img" />
