clean up comments 🧹

--- a/index.html
+++ b/index.html
@@ -274,10 +274,11 @@
           teams to build real world projects.
         </p>
         <p>
-          Previously, I've <a href="./Resume.pdf">worked</a> in the insurance
-          and service industries in a management capacity. I’m looking for an
-          opportunity where I can put my abilities to work for a mission I’m
-          passionate about.
+          Previously, I've
+          <a href="/resume/Resume.pdf" target="_blank">worked</a> in the
+          insurance and service industries in a management capacity. I’m looking
+          for an opportunity where I can put my abilities to work for a mission
+          I’m passionate about.
         </p>
         <!-- <p>
           I like creating beautiful websites using
