:art: update about me styling
add link for resume

--- a/index.html
+++ b/index.html
@@ -119,11 +119,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a
-              href="https://resume.creddle.io/resume/6ucve7g9ic"
-              target="_blank"
-              class="nav-link"
-            >
+            <a href="/Jose-Montero-resume.pdf" target="_blank" class="nav-link">
               Resume
             </a>
           </li>
@@ -274,11 +270,16 @@
           teams to build real world projects.
         </p>
         <p>
-          Previously, I've
-          <a href="/resume/Resume.pdf" target="_blank">worked</a> in the
-          insurance and service industries in a management capacity. I’m looking
-          for an opportunity where I can put my abilities to work for a mission
-          I’m passionate about.
+          I have previous
+          <a
+            href="/Jose-Montero-resume.pdf"
+            class="about-me__link"
+            target="_blank"
+            >experience</a
+          >
+          in the insurance and service industries in a management capacity. I’m
+          looking for an opportunity where I can put my abilities to work for a
+          mission I’m passionate about.
         </p>
         <!-- <p>
           I like creating beautiful websites using
