:art: update styling to about me

--- a/index.html
+++ b/index.html
@@ -264,10 +264,10 @@
 
       <div class="about-me__body">
         <p>
-          I'm a full-stack developer in Chicago. I'm a full-time student at
-          Lambda School. I'm currently enrolled in the web development program
-          where students learn web development and CS fundamentals by working in
-          teams to build real world projects.
+          I'm a full-stack developer in Chicago and graduate of Lambda School. I
+          was enrolled in the web development program where I learned web
+          development and CS fundamentals by working in teams to build real
+          world projects.
         </p>
         <p>
           I have previous
