:art: Adding copy to Slices
WIP

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
         </a>
 
         <!-- Portfolio item 02 -->
-        <a href="revitalize.html" target="_blank" class="portfolio__item">
+        <a href="slicesofchicago.html" target="_blank" class="portfolio__item">
           <img
             src="img/projects/nifty/nifty1.jpg"
             alt=""
@@ -333,7 +333,7 @@
         </a>
 
         <!-- Portfolio item 03 -->
-        <a href="revitalize.html" target="_blank" class="portfolio__item">
+        <a href="moviebase.html" target="_blank" class="portfolio__item">
           <img
             src="img/projects/crown/crown1.jpg"
             alt=""
