--- a/slicesofchicago.html
+++ b/slicesofchicago.html
@@ -7,7 +7,7 @@
       name="description"
       content="creating projects that make a difference"
     />
-    <title>Jose Mario | ReVitalize</title>
+    <title>Jose Mario | Slices of Chicago</title>
     <link rel="shortcut icon" href="img/favicon.ico" />
     <link
       rel="stylesheet"
@@ -100,23 +100,28 @@
         </div>
         <ul class="menu-nav">
           <li class="nav-item current">
-            <a href="index.html#home" class="nav-link">
+            <a href="#home" class="nav-link">
               Home
             </a>
           </li>
           <li class="nav-item">
-            <a href="index.html#services" class="nav-link">
-              My Services
+            <a href="#services" class="nav-link">
+              Skills
             </a>
           </li>
           <li class="nav-item">
-            <a href="index.html#about" class="nav-link">
+            <a href="#about" class="nav-link">
               About Me
             </a>
           </li>
           <li class="nav-item">
-            <a href="index.html#work" class="nav-link">
+            <a href="#work" class="nav-link">
               Portfolio
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="/Jose-Montero-resume.pdf" target="_blank" class="nav-link">
+              Resume
             </a>
           </li>
         </ul>
@@ -125,10 +130,10 @@
 
     <section class="intro">
       <h1 class="section__title section__title--intro">
-        This is <strong>ReVitalize</strong>
+        Leave a review on <strong>Slices of Chicago</strong>
       </h1>
       <p class="section__subtitle section__subtitle--intro">
-        A modern approach to building your community
+        All about the best pizzas in the city
       </p>
 
       <img
