:art: Create shell for each portfolio item

--- a/moviebase.html
+++ b/moviebase.html
@@ -7,7 +7,7 @@
       name="description"
       content="creating projects that make a difference"
     />
-    <title>Jose Mario | ReVitalize</title>
+    <title>Jose Mario | Moviebase</title>
     <link rel="shortcut icon" href="img/favicon.ico" />
     <link
       rel="stylesheet"
@@ -100,13 +100,13 @@
         </div>
         <ul class="menu-nav">
           <li class="nav-item current">
-            <a href="index.html#home" class="nav-link">
+            <a href="index.html" class="nav-link">
               Home
             </a>
           </li>
           <li class="nav-item">
             <a href="index.html#services" class="nav-link">
-              My Services
+              Skills
             </a>
           </li>
           <li class="nav-item">
@@ -119,16 +119,21 @@
               Portfolio
             </a>
           </li>
+          <li class="nav-item">
+            <a href="/Jose-Montero-resume.pdf" target="_blank" class="nav-link">
+              Resume
+            </a>
+          </li>
         </ul>
       </nav>
     </header>
 
     <section class="intro">
       <h1 class="section__title section__title--intro">
-        This is <strong>ReVitalize</strong>
+        Enjoy a night in with <strong>Moviebase</strong>
       </h1>
       <p class="section__subtitle section__subtitle--intro">
-        A modern approach to building your community
+        remember all your favorite movies
       </p>
 
       <img
