--- a/revitalize.html
+++ b/revitalize.html
@@ -100,13 +100,13 @@
         </div>
         <ul class="menu-nav">
           <li class="nav-item current">
-            <a href="index.html#home" class="nav-link">
+            <a href="index.html" class="nav-link">
               Home
             </a>
           </li>
           <li class="nav-item">
             <a href="index.html#services" class="nav-link">
-              My Services
+              Skills
             </a>
           </li>
           <li class="nav-item">
@@ -117,6 +117,11 @@
           <li class="nav-item">
             <a href="index.html#work" class="nav-link">
               Portfolio
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="/Jose-Montero-resume.pdf" target="_blank" class="nav-link">
+              Resume
             </a>
           </li>
         </ul>
