--- a/slicesofchicago.html
+++ b/slicesofchicago.html
@@ -100,22 +100,22 @@
         </div>
         <ul class="menu-nav">
           <li class="nav-item current">
-            <a href="#home" class="nav-link">
+            <a href="index.html" class="nav-link">
               Home
             </a>
           </li>
           <li class="nav-item">
-            <a href="#services" class="nav-link">
+            <a href="index.html#services" class="nav-link">
               Skills
             </a>
           </li>
           <li class="nav-item">
-            <a href="#about" class="nav-link">
+            <a href="index.html#about" class="nav-link">
               About Me
             </a>
           </li>
           <li class="nav-item">
-            <a href="#work" class="nav-link">
+            <a href="index.html#work" class="nav-link">
               Portfolio
             </a>
           </li>
