:art: Add screenshot for moviebase

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
         <!-- Portfolio item 03 -->
         <a href="moviebase.html" target="_blank" class="portfolio__item">
           <img
-            src="img/projects/crown/crown1.jpg"
+            src="img/projects/moviebase/moviebase2.png"
             alt=""
             class="portfolio__img"
           />
