:zap: Add logo for slices

--- a/index.html
+++ b/index.html
@@ -326,8 +326,8 @@
         <!-- Portfolio item 02 -->
         <a href="slicesofchicago.html" target="_blank" class="portfolio__item">
           <img
-            src="img/projects/nifty/nifty1.jpg"
-            alt=""
+            src="img/projects/slices/rsz_1logo.png"
+            alt="pizza logo"
             class="portfolio__img"
           />
         </a>
