--- a/index.html
+++ b/index.html
@@ -161,10 +161,6 @@
               <i class="fab fa-adobe"></i>
               <p>Adobe XD</p>
             </li>
-            <!-- <li>
-              <i class="fab fa-sass"></i>
-              <p>SASS</p>
-            </li> -->
           </ul>
         </div>
         <!-- / service -->
@@ -207,10 +203,7 @@
               <i class="fab fa-python"></i>
               <p>Python</p>
             </li>
-            <!-- <li>
-              <i class="fas fa-database"></i>
-              <p>SQL</p>
-            </li> -->
+
             <li>
               <i class="fab fa-git-alt"></i>
               <p>Git</p>
@@ -229,15 +222,7 @@
               <i class="fab fa-trello"></i>
               <p>Trello</p>
             </li>
-            <!-- <li>
-              <img
-                src="/img/notion.png"
-                width="23"
-                height="25"
-                alt="notion img"
-              />
-              <p>Notion</p>
-            </li> -->
+
             <li>
               <i class="fas fa-sync"></i>
               <p>Agile</p>
@@ -281,66 +266,222 @@
           looking for an opportunity where I can put my abilities to work for a
           mission I’m passionate about.
         </p>
-        <!-- <p>
-          I like creating beautiful websites using
-          <strong> JavaScript, React, SASS, and Styled Components</strong> and
-          scalable databases using
-          <strong
-            >NodeJS/Express, PostgreSQL, MySQL, Apollo/GraphQL, Firebase, and
-            MongoDB
-          </strong>
-        </p> -->
-        <!-- <p>
-          You can check out my
-          <a target="_blank" href="http://www.google.com"
-            ><strong>resume</strong></a
-          >. Lets work together:
-          <a href="mailto:josemariodev@gmail.com"
-            ><strong>josemariodev@gmail.com</strong></a
-          >
-        </p> -->
       </div>
 
       <img src="img/action.jpg" alt="Jose smiling" class="about-me__img" />
       <!-- <img src="img/chicago.jpg" alt="Jose smiling" class="about-me__img" /> -->
     </section>
 
-    <!-- My Work -->
-    <section class="my-work" id="work">
-      <h2 class="section__title section__title--work">Portfolio</h2>
-      <p class="section__subtitle section__subtitle--work">
-        A selection of my work
-      </p>
-
-      <div class="portfolio">
-        <!-- Portfolio item 01 -->
-
-        <a href="revitalize.html" target="_blank" class="portfolio__item">
+    <!-- portfolio -->
+    <section class="portfolio" id="portfolio">
+      <h1>Portfolio</h1>
+      <div class="portfolio-items">
+        <!-- Portfolio item 1 -->
+        <figure class="portfolio-item">
           <img
+            class="portfolio-image"
             src="img/projects/revitalize/revitalize-homepage.jpg"
-            alt=""
-            class="portfolio__img"
+            alt="portfolio item"
           />
-        </a>
+          <figcaption>
+            <h2 class="portfolio-title">Project Name</h2>
+            <p class="portfolio-desc">
+              A short description could go right here
+            </p>
+            <a href="#" class="portfolio-link">More info</a>
+          </figcaption>
 
-        <!-- Portfolio item 02 -->
-        <a href="slicesofchicago.html" target="_blank" class="portfolio__item">
-          <img
-            src="img/projects/slices/rsz_1logo.png"
-            alt="pizza logo"
-            class="portfolio__img"
-          />
-        </a>
+          <!-- Portfolio modal 1 -->
+          <div class="portfolio-modal">
+            <button class="modal-close">
+              <svg x="0px" y="0px" viewBox="0 0 30 17" height="17" width="30">
+                <g transform="translate(-15 -15)">
+                  <polygon
+                    class="st0"
+                    points="31.2,23.5 37,29.3 35.8,30.5 30,24.7 24.2,30.5 23,29.3 28.8,23.5 23,17.7 24.2,16.5 30,22.3 
+                35.8,16.5 37,17.7 	"
+                  />
+                </g>
+              </svg>
+            </button>
+            <div class="portfolio-header header-one">
+              <div class="portfolio-title-box">
+                <h2 class="portfolio-title">Project Name</h2>
+                <p class="portfolio-subtitle">Subtitle goes here</p>
+              </div>
+            </div>
+            <!-- / portfolio-header -->
+            <div class="portfolio-content">
+              <p>
+                Aenean mattis tristique elementum. Duis massa tellus, tempus non
+                fermentum at, venenatis et augue. Phasellus tristique purus sed
+                sagittis interdum. Duis luctus sapien justo, vel viverra ex
+                convallis et. Maecenas suscipit lacus ut lectus mattis ornare.
+                Vestibulum faucibus purus sit amet erat lobortis, tristique
+                fringilla leo sodales. Interdum et malesuada fames ac ante.
+              </p>
+              <img
+                class="portfolio-full-width"
+                src="img/portfolio-01.jpg"
+                alt="an image"
+              />
+              <p>
+                Aenean mattis tristique elementum. Duis massa tellus, tempus non
+                fermentum at, venenatis et augue. Phasellus tristique purus sed
+                sagittis interdum. Duis luctus sapien justo, vel viverra ex
+                convallis et. Maecenas suscipit lacus ut lectus mattis ornare.
+                Vestibulum faucibus purus sit amet erat lobortis, tristique
+                fringilla leo sodales. Interdum et malesuada fames ac ante.
+              </p>
+              <p>
+                Aenean mattis tristique elementum. Duis massa tellus, tempus non
+                fermentum at, venenatis et augue. Phasellus tristique purus sed
+                sagittis interdum. Duis luctus sapien justo, vel viverra ex
+                convallis et. Maecenas suscipit lacus ut lectus mattis ornare.
+                Vestibulum faucibus purus sit amet erat lobortis, tristique
+                fringilla leo sodales. Interdum et malesuada fames ac ante.
+              </p>
+              <img
+                class="portfolio-pull-left"
+                src="img/portfolio-01.jpg"
+                alt="an image"
+              />
+              <p>
+                Aenean mattis tristique elementum. Duis massa tellus, tempus non
+                fermentum at, venenatis et augue. Phasellus tristique purus sed
+                sagittis interdum. Duis luctus sapien justo, vel viverra ex
+                convallis et. Maecenas suscipit lacus ut lectus mattis ornare.
+                Vestibulum faucibus purus sit amet erat lobortis, tristique
+                fringilla leo sodales. Interdum et malesuada fames ac ante.
+              </p>
+              <p>
+                Aenean mattis tristique elementum. Duis massa tellus, tempus non
+                fermentum at, venenatis et augue. Phasellus tristique purus sed
+                sagittis interdum. Duis luctus sapien justo, vel viverra ex
+                convallis et. Maecenas suscipit lacus ut lectus mattis ornare.
+                Vestibulum faucibus purus sit amet erat lobortis, tristique
+                fringilla leo sodales. Interdum et malesuada fames ac ante.
+              </p>
+              <img
+                class="portfolio-pull-right"
+                src="img/portfolio-01.jpg"
+                alt="an image"
+              />
+            </div>
+          </div>
+          <!-- /modal -->
+        </figure>
 
-        <!-- Portfolio item 03 -->
-        <a href="moviebase.html" target="_blank" class="portfolio__item">
+        <!-- Portfolio item 2 -->
+        <figure class="portfolio-item">
           <img
+            class="portfolio-image"
             src="img/projects/moviebase/moviebase2.png"
-            alt=""
-            class="portfolio__img"
+            alt="portfolio item"
           />
-        </a>
-      </div>
+          <figcaption>
+            <h2 class="portfolio-title">Project Name</h2>
+            <p class="portfolio-desc">
+              A short description could go right here
+            </p>
+            <a href="#" class="portfolio-link">More info</a>
+          </figcaption>
+          <div class="portfolio-modal">
+            <button class="modal-close">
+              <svg x="0px" y="0px" viewBox="0 0 30 17" height="17" width="30">
+                <g transform="translate(-15 -15)">
+                  <polygon
+                    class="st0"
+                    points="31.2,23.5 37,29.3 35.8,30.5 30,24.7 24.2,30.5 23,29.3 28.8,23.5 23,17.7 24.2,16.5 30,22.3 
+                    35.8,16.5 37,17.7 	"
+                  />
+                </g>
+              </svg>
+            </button>
+            <div class="portfolio-header header-two">
+              <div class="portfolio-title-box">
+                <h2 class="portfolio-title">Project Name 2</h2>
+                <p class="portfolio-subtitle">Subtitle goes here</p>
+              </div>
+            </div>
+            <!-- / portfolio-header -->
+            <div class="portfolio-content">
+              <p>
+                Aenean mattis tristique elementum. Duis massa tellus, tempus non
+                fermentum at, venenatis et augue. Phasellus tristique purus sed
+                sagittis interdum. Duis luctus sapien justo, vel viverra ex
+                convallis et. Maecenas suscipit lacus ut lectus mattis ornare.
+                Vestibulum faucibus purus sit amet erat lobortis, tristique
+                fringilla leo sodales. Interdum et malesuada fames ac ante.
+              </p>
+              <img
+                class="portfolio-full-width"
+                src="img/portfolio-02.jpg"
+                alt="an image"
+              />
+              <p>
+                Aenean mattis tristique elementum. Duis massa tellus, tempus non
+                fermentum at, venenatis et augue. Phasellus tristique purus sed
+                sagittis interdum. Duis luctus sapien justo, vel viverra ex
+                convallis et. Maecenas suscipit lacus ut lectus mattis ornare.
+                Vestibulum faucibus purus sit amet erat lobortis, tristique
+                fringilla leo sodales. Interdum et malesuada fames ac ante.
+              </p>
+              <p>
+                Aenean mattis tristique elementum. Duis massa tellus, tempus non
+                fermentum at, venenatis et augue. Phasellus tristique purus sed
+                sagittis interdum. Duis luctus sapien justo, vel viverra ex
+                convallis et. Maecenas suscipit lacus ut lectus mattis ornare.
+                Vestibulum faucibus purus sit amet erat lobortis, tristique
+                fringilla leo sodales. Interdum et malesuada fames ac ante.
+              </p>
+              <img
+                class="portfolio-pull-left"
+                src="img/portfolio-02.jpg"
+                alt="an image"
+              />
+              <p>
+                Aenean mattis tristique elementum. Duis massa tellus, tempus non
+                fermentum at, venenatis et augue. Phasellus tristique purus sed
+                sagittis interdum. Duis luctus sapien justo, vel viverra ex
+                convallis et. Maecenas suscipit lacus ut lectus mattis ornare.
+                Vestibulum faucibus purus sit amet erat lobortis, tristique
+                fringilla leo sodales. Interdum et malesuada fames ac ante.
+              </p>
+              <p>
+                Aenean mattis tristique elementum. Duis massa tellus, tempus non
+                fermentum at, venenatis et augue. Phasellus tristique purus sed
+                sagittis interdum. Duis luctus sapien justo, vel viverra ex
+                convallis et. Maecenas suscipit lacus ut lectus mattis ornare.
+                Vestibulum faucibus purus sit amet erat lobortis, tristique
+                fringilla leo sodales. Interdum et malesuada fames ac ante.
+              </p>
+              <img
+                class="portfolio-pull-right"
+                src="img/portfolio-02.jpg"
+                alt="an image"
+              />
+            </div>
+          </div>
+        </figure>
+
+        <!-- Portfolio item 3 -->
+        <figure class="portfolio-item">
+          <img
+            class="portfolio-image"
+            src="img/projects/slices/rsz_1logo.png"
+            alt="portfolio item"
+          />
+          <figcaption>
+            <h2 class="portfolio-title">Project Name</h2>
+            <p class="portfolio-desc">
+              A short description could go right here
+            </p>
+            <a href="#" class="portfolio-link">More info</a>
+          </figcaption>
+        </figure>
+
+        
     </section>
 
     <!-- Footer -->
@@ -379,5 +520,6 @@
       </ul>
     </footer>
     <script src="js/index.js"></script>
+    <script src="js/modal.js"></script>
   </body>
 </html>
