--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="#work" class="nav-link">
+            <a href="#portfolio" class="nav-link">
               Portfolio
             </a>
           </li>
@@ -274,10 +274,13 @@
 
     <!-- portfolio -->
     <section class="portfolio" id="portfolio">
-      <h1>Portfolio</h1>
+      <h2 class="section__title section__title--work">Portfolio</h2>
+      <p class="section__subtitle section__subtitle--work">
+        A selection of my work
+      </p>
       <div class="portfolio-items">
         <!-- Portfolio item 1 -->
-        <figure class="portfolio-item">
+        <div class="portfolio-item">
           <img
             class="portfolio-image"
             src="img/projects/revitalize/revitalize-homepage.jpg"
@@ -370,10 +373,10 @@
             </div>
           </div>
           <!-- /modal -->
-        </figure>
+        </div>
 
         <!-- Portfolio item 2 -->
-        <figure class="portfolio-item">
+        <div class="portfolio-item">
           <img
             class="portfolio-image"
             src="img/projects/moviebase/moviebase2.png"
@@ -463,10 +466,10 @@
               />
             </div>
           </div>
-        </figure>
+        </div>
 
         <!-- Portfolio item 3 -->
-        <figure class="portfolio-item">
+        <div class="portfolio-item">
           <img
             class="portfolio-image"
             src="img/projects/slices/rsz_1logo.png"
@@ -479,7 +482,7 @@
             </p>
             <a href="#" class="portfolio-link">More info</a>
           </figcaption>
-        </figure>
+        </div>
 
         
     </section>
