:art: update portfolio img

--- a/index.html
+++ b/index.html
@@ -386,9 +386,9 @@
 
       <!-- Portfolio item 3 -->
       <div class="portfolio-item">
-        <img class="portfolio-image" src="img/projects/slices/rsz_1logo.png" alt="portfolio item" />
+        <img class="portfolio-image" src="img/projects/slices/dang-homescreen.png" alt="portfolio item" />
         <figcaption>
-          <h2 class="portfolio-title">Dang That's Delicious</h2>
+          <h2 class="portfolio-title">Now That's Delicious</h2>
           <p class="portfolio-desc">
             Chicago's favorite foods
           </p>
