:lipstick: Modal styling wip

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
       </p>
       <p>
         I have previous
-        <a href="/Jose-Montero-resume.pdf" class="about-me__link" target="_blank">experience</a>
+        <a href="/Jose-Montero-resume.pdf" class="styled__link" target="_blank">experience</a>
         in the insurance and service industries in a management capacity. I’m
         looking for an opportunity where I can put my abilities to work for a
         mission I’m passionate about.
@@ -269,16 +269,19 @@
           <!-- / portfolio-header -->
           <div class="portfolio-content">
             <div class="portfolio-item-individual">
-              <a href="https://www.revitalize.community" target="_blank">
-                <img src="img/projects/revitalize/revitalize-walkthru1.gif" alt="" />
-              </a>
+
+              <img src="img/projects/revitalize/revitalize-walkthru1.gif" alt="" />
+
               <p class="portfolio-item__subheader">
                 Project Purpose
               </p>
               <p>
-                A web application that connects vocational and trade students with
-                experts in their field in order to collaborate on crowd-funded projects.
-                I worked as a Front-End Developer.
+                <a class="styled__link" href="http://www.revitalize.community"
+                  onclick="window.open(this.href); return false;"
+                  onkeypress="window.open(this.href); return false;">Revitalize</a> is a web application that connects
+                vocational and trade students with experts in their field in order to collaborate on crowd-funded
+                projects. Project owners can create projects that need rehabilitating. Students can browse projects and
+                apply to work on one. Users can make donations to revitalize projects.
               </p>
 
               <p class="portfolio-item__subheader">
@@ -319,7 +322,7 @@
             Find your favorite movie
           </p>
           <a href="#moviebase" class="portfolio-link">More info</a>
-        </figcaption>        
+        </figcaption>
         <div class="portfolio-modal" id="moviebase">
           <button class="modal-close">
             <svg x="0px" y="0px" viewBox="0 0 30 17" height="17" width="30">
@@ -338,15 +341,15 @@
               Relive your old favorites
             </p>
 
-            <img src="img/projects/revitalize/revitalize-homepage.jpg" alt="" class="intro__img" />
+            <img src="img/projects/moviebase/moviebase-homescreen.png" alt="" class="intro__img" />
           </section>
 
           <!-- / portfolio-header -->
           <div class="portfolio-content">
             <div class="portfolio-item-individual">
-              <a href="https://www.revitalize.community" target="_blank">
-                <img src="img/projects/revitalize/revitalize-walkthru1.gif" alt="" />
-              </a>
+
+              <img src="img/projects/revitalize/revitalize-walkthru1.gif" alt="" />
+
               <p class="portfolio-item__subheader">
                 Project Purpose
               </p>
@@ -406,21 +409,21 @@
 
           <section class="intro">
             <h1 class="section__title section__title--intro">
-              This is <strong>Dang That's Delicous</strong>
+              Now That's <strong> Delicious</strong>
             </h1>
             <p class="section__subtitle section__subtitle--intro">
               Chicago's favorites foods
             </p>
 
-            <img src="img/projects/revitalize/revitalize-homepage.jpg" alt="" class="intro__img" />
+            <img src="img/projects/slices/dang-review.png" alt="" class="intro__img" />
           </section>
 
           <!-- / portfolio-header -->
           <div class="portfolio-content">
             <div class="portfolio-item-individual">
-              <a href="https://www.revitalize.community" target="_blank">
-                <img src="img/projects/revitalize/revitalize-walkthru1.gif" alt="" />
-              </a>
+
+              <img src="img/projects/revitalize/revitalize-walkthru1.gif" alt="" />
+
               <p class="portfolio-item__subheader">
                 Project Purpose
               </p>
