--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
       A selection of my work
     </p>
     <div class="portfolio-items">
-      <!-- Portfolio item 1 -->
+      <!-- Portfolio item 1 ReVitalize -->
       <div class="portfolio-item">
         <img class="portfolio-image" src="img/projects/revitalize/revitalize-homepage.jpg" alt="portfolio item" />
         <figcaption>
@@ -244,7 +244,7 @@
           <a href="#revitalize" class="portfolio-link">More info</a>
         </figcaption>
 
-        <!-- Portfolio modal 1 -->
+        <!-- Portfolio modal 1 ReVitalize -->
         <div class="portfolio-modal" id="revitalize">
           <button class="modal-close">
             <svg x="0px" y="0px" viewBox="0 0 30 17" height="17" width="30">
@@ -278,32 +278,40 @@
               <p>
                 <a class="styled__link" href="http://www.revitalize.community"
                   onclick="window.open(this.href); return false;"
-                  onkeypress="window.open(this.href); return false;">Revitalize</a> is a web application that connects
+                  onkeypress="window.open(this.href); return false;">ReVitalize</a> is a web application that connects
                 vocational and trade students with experts in their field in order to collaborate on crowd-funded
-                projects. Project owners can create projects that need rehabilitating. Students can browse projects and
-                apply to work on one. Users can make donations to revitalize projects.
+                projects. Building owners can create projects that need rehabilitating. Students can view and apply to
+                work on available projects. Visitors can browse and make donations to revitalize projects.
               </p>
 
               <p class="portfolio-item__subheader">
                 Tech Stack
               </p>
               <p>
-                Revitalize was built using
-                <strong>React, SASS, Styled Components, Apollo, GraphQL, Prism,
-                  Docker</strong>.
+                We used Figma to collaborate on the custom design. The front-end
+                was built using React. For styling we used
+                Styled Components and SASS. The back-end was built using GraphQL, Apollo, Prisma. It was stored in a
+                Docker container and hosted on Heroku.
               </p>
 
               <p class="portfolio-item__subheader">build process</p>
               <p>
-                talk about the build/design process. 3 two week sprints over six weeks,
-                daily standups, notion for documentation, trello, scrum/agile? etc.
+                ReVitalize was built by a team of 7 engineers and 2 designers led by a project manager. My Role was
+                Front-End Developer. It was built in
+                2 sprints, with each sprint lasting 2 weeks. As team we held daily stand-ups. Engineers were assigned
+                tickets from the project manager and pair-programmed to complete tasks.
+                We used Notion for documentation and to track tickets.
               </p>
 
               <p class="portfolio-item__subheader">End Result</p>
               <p>
-                Talk about the results and actions lessons learned Visit
-                www.revitalize.community with the username jose@gmail.com and password
-                'password' to experience it for yourself.
+                Working on ReVitalize was an amazing experience. It provided me with experience in a real world
+                environment building a complex
+                app that had an impact on communities. You can <a class="styled__link"
+                  href="http://www.revitalize.community" onclick="window.open(this.href); return false;"
+                  onkeypress="window.open(this.href); return false;">experience</a> it for yourself. username: <span
+                  class="credentials">
+                  jose@gmail.com</span> password: <span class="credentials">password</span>
               </p>
             </div>
 
@@ -313,13 +321,13 @@
         <!-- /modal -->
       </div>
 
-      <!-- Portfolio item 2 -->
+      <!-- Portfolio item 2 moviebase -->
       <div class="portfolio-item">
         <img class="portfolio-image" src="img/projects/moviebase/moviebase2.png" alt="portfolio item" />
         <figcaption>
           <h2 class="portfolio-title">Moviebase</h2>
           <p class="portfolio-desc">
-            Find your favorite movie
+            Explore. Discover. Remember.
           </p>
           <a href="#moviebase" class="portfolio-link">More info</a>
         </figcaption>
@@ -338,7 +346,7 @@
               This is <strong>Moviebase</strong>
             </h1>
             <p class="section__subtitle section__subtitle--intro">
-              Relive your old favorites
+              Explore. Discover. Remember.
             </p>
 
             <img src="img/projects/moviebase/moviebase-homescreen.png" alt="" class="intro__img" />
@@ -348,24 +356,27 @@
           <div class="portfolio-content">
             <div class="portfolio-item-individual">
 
-              <img src="img/projects/revitalize/revitalize-walkthru1.gif" alt="" />
+              <img src="img/projects/moviebase/moviebase-walkthru.gif" alt="" />
 
               <p class="portfolio-item__subheader">
                 Project Purpose
               </p>
               <p>
-                A web application that connects vocational and trade students with
-                experts in their field in order to collaborate on crowd-funded projects.
-                I worked as a Front-End Developer.
+                <a class="styled__link" href="http://www.moviebase.online"
+                  onclick="window.open(this.href); return false;"
+                  onkeypress="window.open(this.href); return false;">Moviebase</a> is a web application where visitors
+                can find information on their favorite movies and television shows. They can view trailers, watch
+                previews, and read information about popular actors.
               </p>
 
               <p class="portfolio-item__subheader">
                 Tech Stack
               </p>
               <p>
-                Revitalize was built using
-                <strong>React, SASS, Styled Components, Apollo, GraphQL, Prism,
-                  Docker</strong>.
+                Moviebase was built using React, SASS, and Styled Components for the front end. The back-end uses <a
+                  class="styled__link" href="http://www.themoviedb.org" onclick="window.open(this.href); return false;"
+                  onkeypress="window.open(this.href); return false;">The Movie DB</a> api for data. Movie information is
+                passed from the api to the front-end using the Axios HTTP client.
               </p>
 
               <p class="portfolio-item__subheader">build process</p>
@@ -376,9 +387,12 @@
 
               <p class="portfolio-item__subheader">End Result</p>
               <p>
-                Talk about the results and actions lessons learned Visit
-                www.revitalize.community with the username jose@gmail.com and password
-                'password' to experience it for yourself.
+                Working on ReVitalize was an amazing experience. It provided me with experience in a real world
+                environment building a complex
+                app that had an impact on communities. You can <a class="styled__link"
+                  href="http://www.moviebase.online" onclick="window.open(this.href); return false;"
+                  onkeypress="window.open(this.href); return false;">experience</a> it
+                for yourself.
               </p>
             </div>
 
@@ -393,7 +407,7 @@
         <figcaption>
           <h2 class="portfolio-title">Now That's Delicious</h2>
           <p class="portfolio-desc">
-            Chicago's favorite foods
+            Good food, reviewed.
           </p>
           <a href="#dang" class="portfolio-link">More info</a>
         </figcaption>
@@ -412,7 +426,7 @@
               Now That's <strong> Delicious</strong>
             </h1>
             <p class="section__subtitle section__subtitle--intro">
-              Chicago's favorites foods
+              Good food, reviewed.
             </p>
 
             <img src="img/projects/slices/dang-review.png" alt="" class="intro__img" />
@@ -422,7 +436,7 @@
           <div class="portfolio-content">
             <div class="portfolio-item-individual">
 
-              <img src="img/projects/revitalize/revitalize-walkthru1.gif" alt="" />
+              <img src="img/projects/slices/delicious-walkthru.gif" alt="" />
 
               <p class="portfolio-item__subheader">
                 Project Purpose
