:construction_worker: update styling on modals

--- a/index.html
+++ b/index.html
@@ -381,18 +381,15 @@
 
               <p class="portfolio-item__subheader">build process</p>
               <p>
-                talk about the build/design process. 3 two week sprints over six weeks,
-                daily standups, notion for documentation, trello, scrum/agile? etc.
+                Moviebase was a solo project and was built in a 2 week sprint using agile methodology.
               </p>
 
               <p class="portfolio-item__subheader">End Result</p>
               <p>
-                Working on ReVitalize was an amazing experience. It provided me with experience in a real world
-                environment building a complex
-                app that had an impact on communities. You can <a class="styled__link"
-                  href="http://www.moviebase.online" onclick="window.open(this.href); return false;"
-                  onkeypress="window.open(this.href); return false;">experience</a> it
-                for yourself.
+                <a class="styled__link" href="http://www.moviebase.online"
+                  onclick="window.open(this.href); return false;"
+                  onkeypress="window.open(this.href); return false;">Moviebase</a> was a fun project I created out of my
+                love for movies.
               </p>
             </div>
 
