:lipstick: modal styles

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                 Tech Stack
               </p>
               <p>
-                Moviebase was built using React, SASS, and Styled Components for the front end. The back-end uses <a
+                Moviebase was built using React, SASS, and Bootstrap for the front end. The back-end uses <a
                   class="styled__link" href="http://www.themoviedb.org" onclick="window.open(this.href); return false;"
                   onkeypress="window.open(this.href); return false;">The Movie DB</a> api for data. Movie information is
                 passed from the api to the front-end using the Axios HTTP client.
