:lipstick: Update copy for modals

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
         </div>
       </div>
 
-      <!-- Portfolio item 3 -->
+      <!-- Portfolio item 3  Delicious -->
       <div class="portfolio-item">
         <img class="portfolio-image" src="img/projects/slices/dang-homescreen.png" alt="portfolio item" />
         <figcaption>
@@ -439,18 +439,18 @@
                 Project Purpose
               </p>
               <p>
-                A web application that connects vocational and trade students with
-                experts in their field in order to collaborate on crowd-funded projects.
-                I worked as a Front-End Developer.
+                <a class="styled__link" href="https://thatsdeliciousapp.herokuapp.com/"
+                  onclick="window.open(this.href); return false;" onkeypress="window.open(this.href); return false;">Now
+                  That's Delicious</a> is a web application where visitors
+                can find information on their favorite restaurants and leave reviews.
               </p>
 
               <p class="portfolio-item__subheader">
                 Tech Stack
               </p>
               <p>
-                Revitalize was built using
-                <strong>React, SASS, Styled Components, Apollo, GraphQL, Prism,
-                  Docker</strong>.
+                This web application was built using
+                Node JS, PUG,
               </p>
 
               <p class="portfolio-item__subheader">build process</p>
@@ -461,9 +461,10 @@
 
               <p class="portfolio-item__subheader">End Result</p>
               <p>
-                Talk about the results and actions lessons learned Visit
-                www.revitalize.community with the username jose@gmail.com and password
-                'password' to experience it for yourself.
+                <a class="styled__link" href="https://thatsdeliciousapp.herokuapp.com/"
+                  onclick="window.open(this.href); return false;"
+                  onkeypress="window.open(this.href); return false;">Moviebase</a> was a fun project I created out of my
+                love for movies.
               </p>
             </div>
 
