:lipstick: add graph tag

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="creating projects that make a difference" />
+  <!-- <meta property="og:title" content="How to Become an SEO Expert (8 Steps)" /> -->
+  <!-- <meta property="og:description" content="Get from SEO newbie to SEO pro in 8 simple steps." /> -->
+  <meta property="og:image" content="/img/graphTag.png" />
   <title>Jose Mario | Developer</title>
   <link rel="shortcut icon" href="img/favicon.ico" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" />
@@ -381,7 +384,8 @@
 
               <p class="portfolio-item__subheader">build process</p>
               <p>
-                Moviebase was a solo project and was built in a 2 week sprint using agile methodology.
+                Moviebase was a solo project and was built in a 2 weeks. I used Trello to keep track and manage project
+                requirements and ticket items.
               </p>
 
               <p class="portfolio-item__subheader">End Result</p>
@@ -389,7 +393,7 @@
                 <a class="styled__link" href="http://www.moviebase.online"
                   onclick="window.open(this.href); return false;"
                   onkeypress="window.open(this.href); return false;">Moviebase</a> was a fun project I created out of my
-                love for movies.
+                love for movies. I gained experience using a styling framework and manipulating data through an API.
               </p>
             </div>
 
@@ -442,29 +446,31 @@
                 <a class="styled__link" href="https://thatsdeliciousapp.herokuapp.com/"
                   onclick="window.open(this.href); return false;" onkeypress="window.open(this.href); return false;">Now
                   That's Delicious</a> is a web application where visitors
-                can find information on their favorite restaurants and leave reviews.
+                can find information on their favorite restaurants and leave reviews. Users can search restaurants by
+                descriptive tags, like their favorite restaruants, and view a top ten list of most popular eateries.
               </p>
 
               <p class="portfolio-item__subheader">
                 Tech Stack
               </p>
               <p>
-                This web application was built using
-                Node JS, PUG,
+                This web application was built using NodeJS, Express, MongoDB on the back-end. The front-end uses PUG
+                templates to render the views users experience.
               </p>
 
               <p class="portfolio-item__subheader">build process</p>
               <p>
-                talk about the build/design process. 3 two week sprints over six weeks,
-                daily standups, notion for documentation, trello, scrum/agile? etc.
+                Building Now That's Delicious took place over 3 weeks, staring with the database model and schema. I
+                used MongoDB as it easy to use and scalable. The front-end was built using PUG templates and styled
+                using SASS.
               </p>
 
               <p class="portfolio-item__subheader">End Result</p>
-              <p>
+              <p>Building
                 <a class="styled__link" href="https://thatsdeliciousapp.herokuapp.com/"
-                  onclick="window.open(this.href); return false;"
-                  onkeypress="window.open(this.href); return false;">Moviebase</a> was a fun project I created out of my
-                love for movies.
+                  onclick="window.open(this.href); return false;" onkeypress="window.open(this.href); return false;">Now
+                  That's Delicious</a> was a challenging project because I was able to learn and develop new
+                technologies such as MongoDB and PUG.
               </p>
             </div>
 
