--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="creating projects that make a difference" />
-  <!-- <meta property="og:title" content="How to Become an SEO Expert (8 Steps)" /> -->
-  <!-- <meta property="og:description" content="Get from SEO newbie to SEO pro in 8 simple steps." /> -->
+
+  <meta property="og:title" content="Jose Mario | Developer" />
+  <meta property="og:type" content="image/jpeg" />
+  <meta property="og:url" content="https://www.josemario.dev" />
   <meta property="og:image" content="/img/graphTag.png" />
+
   <title>Jose Mario | Developer</title>
   <link rel="shortcut icon" href="img/favicon.ico" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" />
