Add links to modal header

--- a/index.html
+++ b/index.html
@@ -267,10 +267,30 @@
             </h1>
             <p class="section__subtitle section__subtitle--intro">
               A modern approach to building your community
+
             </p>
 
             <img src="img/projects/revitalize/revitalize-homepage.jpg" alt="" class="intro__img" />
+
           </section>
+          <!-- portfolio modal links -->
+          <div class="modal-links">
+            <div class="modal-link ">
+              <i class="fas fa-globe"></i>
+              <a class="styled__link" href="http://www.revitalize.community"
+                onclick="window.open(this.href); return false;"
+                onkeypress="window.open(this.href); return false;">www.revitalize.community</a>
+            </div>
+            <div class="modal-link">
+              <i class="fab fa-github"></i>
+              <a class="styled__link" href="http://www.github.com/Revitalized-Playground"
+                onclick="window.open(this.href); return false;"
+                onkeypress="window.open(this.href); return false;">www.github.com/playground</a>
+            </div>
+          </div>
+
+
+
 
           <!-- / portfolio-header -->
           <div class="portfolio-content">
@@ -282,9 +302,7 @@
                 Project Purpose
               </p>
               <p>
-                <a class="styled__link" href="http://www.revitalize.community"
-                  onclick="window.open(this.href); return false;"
-                  onkeypress="window.open(this.href); return false;">ReVitalize</a> is a web application that connects
+                ReVitalize is a web application that connects
                 vocational and trade students with experts in their field in order to collaborate on crowd-funded
                 projects. Building owners can create projects that need rehabilitating. Students can view and apply to
                 work on available projects. Visitors can browse and make donations to revitalize projects.
@@ -357,6 +375,20 @@
 
             <img src="img/projects/moviebase/moviebase-homescreen.png" alt="" class="intro__img" />
           </section>
+          <!-- portfolio modal links -->
+          <div class="modal-links">
+            <div class="modal-link ">
+              <i class="fas fa-globe"></i>
+              <a class="styled__link" href="http://www.moviebase.online" onclick="window.open(this.href); return false;"
+                onkeypress="window.open(this.href); return false;">www.moviebase.online</a>
+            </div>
+            <div class="modal-link">
+              <i class="fab fa-github"></i>
+              <a class="styled__link" href="http://www.github.com/josemariodev/moviebase"
+                onclick="window.open(this.href); return false;"
+                onkeypress="window.open(this.href); return false;">www.github.com/josemariodev/moviebase</a>
+            </div>
+          </div>
 
           <!-- / portfolio-header -->
           <div class="portfolio-content">
@@ -368,9 +400,7 @@
                 Project Purpose
               </p>
               <p>
-                <a class="styled__link" href="http://www.moviebase.online"
-                  onclick="window.open(this.href); return false;"
-                  onkeypress="window.open(this.href); return false;">Moviebase</a> is a web application where visitors
+                Moviebase is a web application where visitors
                 can find information on their favorite movies and television shows. They can view trailers, watch
                 previews, and read information about popular actors.
               </p>
@@ -436,6 +466,22 @@
             <img src="img/projects/slices/dang-review.png" alt="" class="intro__img" />
           </section>
 
+          <!-- portfolio modal links -->
+          <div class="modal-links">
+            <div class="modal-link ">
+              <i class="fas fa-globe"></i>
+              <a class="styled__link" href="https://thatsdeliciousapp.herokuapp.com/"
+                onclick="window.open(this.href); return false;"
+                onkeypress="window.open(this.href); return false;">https://thatsdeliciousapp.herokuapp.com</a>
+            </div>
+            <div class="modal-link">
+              <i class="fab fa-github"></i>
+              <a class="styled__link" href="http://www.github.com/josemariodev/delicious"
+                onclick="window.open(this.href); return false;"
+                onkeypress="window.open(this.href); return false;">www.github.com/josemariodev/delicious</a>
+            </div>
+          </div>
+
           <!-- / portfolio-header -->
           <div class="portfolio-content">
             <div class="portfolio-item-individual">
@@ -446,9 +492,7 @@
                 Project Purpose
               </p>
               <p>
-                <a class="styled__link" href="https://thatsdeliciousapp.herokuapp.com/"
-                  onclick="window.open(this.href); return false;" onkeypress="window.open(this.href); return false;">Now
-                  That's Delicious</a> is a web application where visitors
+                Now That's Delicious is a web application where visitors
                 can find information on their favorite restaurants and leave reviews. Users can search restaurants by
                 descriptive tags, like their favorite restaruants, and view a top ten list of most popular eateries.
               </p>
@@ -457,14 +501,14 @@
                 Tech Stack
               </p>
               <p>
-                This web application was built using NodeJS, Express, MongoDB on the back-end. The front-end uses PUG
+                This web application was built using NodeJS, Express, MongoDB on the back-end. The front-end uses Pug
                 templates to render the views users experience.
               </p>
 
               <p class="portfolio-item__subheader">build process</p>
               <p>
                 Building Now That's Delicious took place over 3 weeks, staring with the database model and schema. I
-                used MongoDB as it easy to use and scalable. The front-end was built using PUG templates and styled
+                used MongoDB as it easy to use and scalable. The front-end was built using Pug templates and styled
                 using SASS.
               </p>
 
@@ -473,7 +517,7 @@
                 <a class="styled__link" href="https://thatsdeliciousapp.herokuapp.com/"
                   onclick="window.open(this.href); return false;" onkeypress="window.open(this.href); return false;">Now
                   That's Delicious</a> was a challenging project because I was able to learn and develop new
-                technologies such as MongoDB and PUG.
+                technologies such as MongoDB and Pug.
               </p>
             </div>
 
