Add links to modal header

--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                 <a class="styled__link" href="https://thatsdeliciousapp.herokuapp.com/"
                   onclick="window.open(this.href); return false;" onkeypress="window.open(this.href); return false;">Now
                   That's Delicious</a> was a challenging project because I was able to learn and develop new
-                technologies such as MongoDB and Pug
+                technologies such as MongoDB and Pug.
               </p>
             </div>
 
