--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="creating projects that make a difference" />
+  <meta name="description" content="Full-Stack Developer interested in projects that make a difference" />
 
   <meta property="og:title" content="Jose Mario | Developer" />
   <meta property="og:type" content="image/jpeg" />
